# ur-reader

./: .gitignore  CMakeLists.txt  DESIGN.md  LICENSE  README.md
src/app/: chrome_controller.cpp  chrome_controller.h  cli_options.cpp  cli_options.h  hover_scrubber.cpp  hover_scrubber.h  main.cpp  main_window.cpp  main_window.h  mode_resolver.cpp  mode_resolver.h  scrubber_preview.cpp  scrubber_preview.h
src/archive/: comic_archive.cpp  comic_archive.h
src/core/: natural_sort.cpp  natural_sort.h  stratified_sample.cpp  stratified_sample.h  types.h
src/decode/: auto_trim.cpp  auto_trim.h  decode_service.cpp  decode_service.h  decoded_image.h  page_cache.cpp  page_cache.h  thumbnail_service.cpp  thumbnail_service.h
src/model/: book.cpp  book.h  comic_info.cpp  comic_info.h  page.cpp  page.h
src/session/: app_config.cpp  app_config.h  book_identity.cpp  book_identity.h  progress_file.cpp  progress_file.h
src/view/: paged_view.cpp  paged_view.h  reader_view.cpp  reader_view.h  scroll_view.cpp  scroll_view.h
test_data/: sample.cb7  sample.cbt  sample.cbz
tests/: app_smoketest.cpp  archive_smoketest.cpp  cache_smoketest.cpp  decode_smoketest.cpp  model_smoketest.cpp  session_smoketest.cpp  view_smoketest.cpp
